<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.quiz.udacity.MainActivity"
    android:background="@drawable/back"
    >
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FullScreenTheme"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="10dp"
            android:id="@+id/header"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_centerVertical="true"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/anonymous"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FFFFFF"
                        android:visibility="invisible"
                        android:layout_centerHorizontal="true"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_horizontal"
                    android:id="@+id/user"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/white"
                    android:gravity="center_horizontal"
                    android:id="@+id/score"
                    />
            </LinearLayout>
            <com.github.jlmd.animatedcircleloadingview.AnimatedCircleLoadingView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/circle_loading_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                app:textColor="#3434ff"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/circle_loading_view"
                android:layout_centerVertical="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="00:00"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="5dp"
                    android:id="@+id/counter"
                    android:visibility="invisible"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_below="@+id/counter"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:layout_marginTop="30dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/points"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/points"
                    android:layout_centerVertical="true"
                    android:text="Pt"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:id="@+id/txt_points"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/Skip"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:layout_marginRight="10dp"
                android:id="@+id/skip"
                android:visibility="invisible"
                android:onClick="skipQuestion"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skip"
                android:padding="10dp"
                android:text="@string/Question"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"
                android:id="@+id/question"
                android:visibility="invisible"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:padding="10dp"
                android:id="@+id/check1"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check1"
                android:padding="10dp"
                android:id="@+id/check2"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check2"
                android:padding="10dp"
                android:id="@+id/check3"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check3"
                android:padding="10dp"
                android:id="@+id/check4"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check4"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_navigate_next_white_24dp"
                android:id="@+id/finish_answer_check"
                android:visibility="invisible"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:padding="10dp"
                android:id="@+id/radio_group"
                android:layout_marginTop="25dp"
                >
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer1_true"
                    android:layout_marginTop="25dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/answer2_false"
                    android:layout_marginTop="25dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"
                    />

            </RadioGroup>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:padding="10dp"
                android:id="@+id/answer_text"
                android:layout_marginTop="30dp"
                android:visibility="invisible"
                android:hint="@string/hint_answer"
                android:inputType="text"
                />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_text"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_navigate_next_white_24dp"
                android:id="@+id/finish_answer"
                android:visibility="invisible"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:padding="10dp"
                android:id="@+id/answer1"
                android:layout_marginTop="25dp"
                android:background="@drawable/answer_button"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer1"
                android:padding="10dp"
                android:id="@+id/answer2"
                android:layout_marginTop="15dp"
                android:background="@drawable/answer_button"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer2"
                android:padding="10dp"
                android:id="@+id/answer3"
                android:layout_marginTop="15dp"
                android:background="@drawable/answer_button"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer3"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:id="@+id/answer4"
                android:background="@drawable/answer_button"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/container"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/welcome"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcome"
                    android:singleLine="true"
                    android:id="@+id/textView"
                    android:padding="0dp"
                    android:layout_above="@+id/textView2"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/create_profile"
                    android:id="@+id/textView2"
                    />
            </LinearLayout>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/container"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:contentPadding="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/anonymous"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FFFFFF"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="10dp"
                        android:onClick="chooseImage"
                        />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_username_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        >
                        <EditText
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Username"
                            android:inputType="text"
                            android:singleLine="true"
                            android:imeOptions="actionDone"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/start_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container"
                android:src="@drawable/ic_navigate_next_white_24dp"
                android:tint="#FFFFFF"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:onClick="animateView"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
